--- a/index.html
+++ b/index.html
@@ -21,7 +21,34 @@
         </div>
         <span>Aliaksandr Stukachou</span>
         <div id="navigation-menu" class="navigation-menu closed">
-
+            &nbsp;
+            <h1>Contacts</h1>
+            <div class="contacts">
+                <div class="contact-row">
+                    <div class="contact-cell">Mobile</div>
+                    <div class="contact-cell">+375 33 659 66 55</div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-cell">Skype</div>
+                    <div class="contact-cell">alex-nagibator</div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-cell">Email</div>
+                    <div class="contact-cell">Smth@mail.com</div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-cell">LinkedIn</div>
+                    <div class="contact-cell"><a href="#">Go to profile</a></div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-cell">VK</div>
+                    <div class="contact-cell"><a href="#">Go to profile</a></div>
+                </div>
+                <div class="contact-row">
+                    <div class="contact-cell">Facebook</div>
+                    <div class="contact-cell"><a href="#">Go to profile</a></div>
+                </div>
+            </div>
         </div>
     </div>
     <div class="first-section">
