--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
-    <div class="navigation">
+    <!--<div class="navigation">
         <div id="hamburger" class="hamburglar is-closed">
             <div class="burger-icon">
                 <div class="burger-container">
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div>-->
     <div class="first-section">
         <div class="first-section--content-layer-wrapper">
             <div class="first-section--content-layer">
@@ -62,17 +62,17 @@
                 </div>
                 <div class="first-section--content-statistic">
                     <div class="first-section--content-statistic-container">
-                        &nbsp;<br/>
+                        &nbsp;<br />
                         <div class="first-section--content-statistic-item">
-                            <span>12</span><strong>Startups</strong><div class="corner corner-left corner-top"></div>
+                            <span>2</span><strong>Startups</strong><div class="corner corner-left corner-top"></div>
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                         <div class="first-section--content-statistic-item">
-                            <span>33</span><strong>Completed projects</strong><div class="corner corner-left corner-top"></div>
+                            <span>4</span><strong>Completed projects</strong><div class="corner corner-left corner-top"></div>
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                         <div class="first-section--content-statistic-item">
-                            <span>2</span><strong>Languages</strong><div class="corner corner-left corner-top"></div>
+                            <span>4</span><strong>Languages</strong><div class="corner corner-left corner-top"></div>
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                         <div class="first-section--content-statistic-item">
@@ -82,11 +82,11 @@
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                         <div class="first-section--content-statistic-item">
-                            <span>4</span><strong>Years</strong><div class="corner corner-left corner-top"></div>
+                            <span>2</span><strong>Years</strong><div class="corner corner-left corner-top"></div>
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                         <div class="first-section--content-statistic-item">
-                            <span>222</span><strong>Skills</strong><div class="corner corner-left corner-top"></div>
+                            <span>63</span><strong>Skills</strong><div class="corner corner-left corner-top"></div>
                             <div class="corner corner-right corner-bottom"></div>
                         </div>
                     </div>
@@ -105,7 +105,7 @@
     <div class="info-section">
         <div class="content-side">
             <div class="marker" data-marker="200" data-text="about me" data-bg="url(img/about-me.jpg)"></div>
-            <h1>WHO I AM</h1>
+            <h1>WHO I AM <ol>ABOUT ME</ol></h1>
             <div class="content">
                 <div class="article">
                     <div class="photo">
@@ -156,39 +156,21 @@
         </div>
         <div class="content-side">
             <div class="marker" data-marker="200" data-text="MY SKILLS" data-bg="url(img/skills.jpg)"></div>
-            <h1>SKILLS</h1>
+            <h1>SKILLS <ol>MY SKILLS</ol></h1> 
             <div class="content">
                 <h3>Languages</h3>
-                <div class="skill-tag">
-                    <span>
+                <div class="languages">
+                    <div class="language">
                         C#
-                    </span>
-                    <div class="tag-expert">
-                        Expert
                     </div>
-                </div>
-                <div class="skill-tag">
-                    <span>
-                        JS(ES5,ES6)
-                    </span>
-                    <div class="tag-advanced">
-                        Advanced
+                    <div class="language">
+                        JS
                     </div>
-                </div>
-                <div class="skill-tag">
-                    <span>
-                        PHP(>5.)
-                    </span>
-                    <div class="tag-advanced">
-                        Advanced
+                    <div class="language">
+                        PHP
                     </div>
-                </div>
-                <div class="skill-tag">
-                    <span>
+                    <div class="language">
                         T-SQL
-                    </span>
-                    <div class="tag-advanced">
-                        Advanced
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -325,8 +307,98 @@
                 </div>
             </div>
         </div>
+        <div class="content-side">
+            <div class="marker" data-marker="200" data-text="PAST PROJECT" data-bg="url(img/past-project.jpg)"></div>
+            <h1>PAST PROJECT <ol>Projects</ol></h1>
+            <div class="slide-show">
+                <div class="slide">
+                    <div class="slide-section">
+                        <div class="slide-part">
+                            <img src="img/pastprject/sama.png" alt="Alternate Text" />
+                        </div>
+                        <div class="slide-part">
+                            <h2>Project name</h2>
+                            <h3>Company</h3>
+                            <p>
+                                Etiam ornare eros nisl, et malesuada dui elementum sit amet.
+                            </p>
+                        </div>
+                        <div class="slide-part participations">
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="slide-section">
+                        <div class="slide-part">
+                            <img src="img/pastprject/sama.png" alt="Alternate Text" />
+                        </div>
+                        <div class="slide-part">
+                            <h2>Project name</h2>
+                            <h3>Company</h3>
+                            <p>
+                                Etiam ornare eros nisl, et malesuada dui elementum sit amet.
+                            </p>
+                        </div>
+                        <div class="slide-part participations">
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                    <div class="slide-section">
+                        <div class="slide-part">
+                            <img src="img/pastprject/sama.png" alt="Alternate Text" />
+                        </div>
+                        <div class="slide-part">
+                            <h2>Project name</h2>
+                            <h3>Company</h3>
+                            <p>
+                                Etiam ornare eros nisl, et malesuada dui elementum sit amet.
+                            </p>
+                        </div>
+                        <div class="slide-part participations">
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                            <li>do something</li>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="clearfix"></div>
     </div>
+    <footer>
+        <div class="contacts">
+            <div class="contact-section">
+                <h2>Find me</h2>
+                <div class="social">
+                    <a href="#">f</a>
+                    <a href="#">vk</a>
+                    <a href="#">in</a>
+                    <a href="#">g</a>
+                </div>
+
+            </div>
+            <div class="contact-section">
+                <h2>
+                    My contacts
+                </h2>
+                <li>+375 (29) 665 55 25</li>
+                <li>+375 (29) 474 55 88</li>
+                <li>sansanetch@gamil.com</li>
+            </div>
+        </div>
+    </footer>
     <div class="left-header">
         <div class="header-wrapper">
             <h1 id="header-left">About me</h1>
@@ -426,7 +498,7 @@
                         $('#header-left').text($(allMarkers[i + 1]).attr('data-text'));
 
                     }
-                    
+
                     break;
                 } else {
                     if ($('#header-left').text().toLowerCase() != $(allMarkers[i]).attr('data-text').toLowerCase()) {
@@ -447,4 +519,5 @@
         })
     </script>
 </body>
+
 </html>
