--- a/index.html
+++ b/index.html
@@ -115,6 +115,21 @@
             </div>
             <div class="clearfix"></div>
         </div>
+        <div class="mobile-nav">
+            <div class="hamburgler-menu">
+                <ul class="hamburgler-menu-list">
+                    <li data-text="top" id="go-top">Start</li>
+                    <li class="selected" data-text="about me">About me</li>
+                    <li data-text="MY SKILLS">My skills</li>
+                    <li data-text="PAST PROJECT">Past project</li>
+                    <li data-text="bottom">Contact</li>
+                </ul>
+            </div>
+
+            <div id="hamburgler" class="hamburgler-icon-wrapper">
+                <span class="hamburgler-icon"></span>
+            </div>
+        </div>
         <div class="content-side">
             <div class="marker" data-marker="200" data-text="about me" data-bg="url(img/about-me.jpg)"></div>
             <h1>WHO I AM <ol>ABOUT ME</ol></h1>
@@ -188,134 +203,142 @@
                 <div class="clearfix"></div>
                 <h3>Skill list</h3>
                 <div class="skill-list">
-                    <h3>Platforms</h3>
-                    <div class="skill-category">
-                        <div class="skill-row">
-                            <div class="skill-cell">.NET</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">Episerver CMS</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">Episerver Commerce</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">JQuery</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">Angular 2</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell has-exp">has expertise</div>
-                        </div>
-                    </div>
-                    <h3>Technologies</h3>
+                    <div class="skill-bandle">
 
-                    <div class="skill-category">
-                        <div class="skill-row">
-                            <div class="skill-cell">ADO.NET</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">ASP.NET</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">ASP.NET MVC 4(5)</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">ASP.NET SignalR</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">LINQ</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">WinForms</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">AJAX</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
-                    </div>
-                    <h3>Mobile</h3>
 
-                    <div class="skill-category">
-                        <div class="skill-row">
-                            <div class="skill-cell">Xamarin</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
+                        <h3>Platforms</h3>
+                        <div class="skill-category">
+                            <div class="skill-row">
+                                <div class="skill-cell">.NET</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">Episerver CMS</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">Episerver Commerce</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">JQuery</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">Angular 2</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell has-exp">has expertise</div>
+                            </div>
                         </div>
-                    </div>
-                    <h3>IDE</h3>
+                        <div class="clearfix"></div>
 
-                    <div class="skill-category">
-                        <div class="skill-row">
-                            <div class="skill-cell">Visual Studio</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">VS code</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
-                        </div>
                     </div>
-                    <h3>Technology of version control</h3>
+                    <div class="skill-bandle">
+                        <h3>Technologies</h3>
 
-                    <div class="skill-category">
-                        <div class="skill-row">
-                            <div class="skill-cell">Git</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell expert">Expert</div>
+                        <div class="skill-category">
+                            <div class="skill-row">
+                                <div class="skill-cell">ADO.NET</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">ASP.NET</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">ASP.NET MVC 4(5)</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell expert">Expert</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">ASP.NET SignalR</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell expert">Expert</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">LINQ</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell expert">Expert</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">WinForms</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell expert">Expert</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">AJAX</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell expert">Expert</div>
+                            </div>
                         </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">Mercurial</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                    </div>
-                    <h3>UXD</h3>
+                        <div class="clearfix"></div>
 
-                    <div class="skill-category">
-                        <div class="skill-row">
-                            <div class="skill-cell">(X)CSS Development</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">(X)HTML Development</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">Adobe Photoshop</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
-                        <div class="skill-row">
-                            <div class="skill-cell">Sass</div>
-                            <div class="skill-cell"></div>
-                            <div class="skill-cell advanced">Advanced</div>
-                        </div>
                     </div>
+                    <div class="skill-bandle">
+                        <h3>Mobile</h3>
+
+                        <div class="skill-category">
+                            <div class="skill-row">
+                                <div class="skill-cell">Xamarin</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+
+                    </div>
+                    <div class="skill-bandle">
+                        <h3>Distributed revision-control</h3>
+
+                        <div class="skill-category">
+                            <div class="skill-row">
+                                <div class="skill-cell">Git</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell expert">Expert</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">Mercurial</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+
+                    </div>
+                    <div class="skill-bandle">
+                        <h3>UXD</h3>
+
+                        <div class="skill-category">
+                            <div class="skill-row">
+                                <div class="skill-cell">(X)CSS Development</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">(X)HTML Development</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">Adobe Photoshop</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                            <div class="skill-row">
+                                <div class="skill-cell">Sass</div>
+                                <div class="skill-cell"></div>
+                                <div class="skill-cell advanced">Advanced</div>
+                            </div>
+                        </div>
+                        <div class="clearfix"></div>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -469,13 +492,13 @@
                     $(e.target).addClass('selected');
                 }
 
-                var height = scrollToElement($(e.target).attr('data-text'));
+                var height = scrollToElement($(e.target).attr('data-text'), 0);
 
                 $('body,html').animate({ scrollTop: height }, 1500);
 
             });
 
-            function scrollToElement(tag) {
+            function scrollToElement(tag, additional, mainDelta) {
                 if (tag == 'top') {
                     $($('.nav-tems li')[1]).addClass('selected');
                     return 0;
@@ -485,13 +508,55 @@
                     return $(document).height() - $(window).height();
                 }
                 var allMarkers = $('.marker');
+                var firstSectionHeight = $($('.first-section')[0]).height();
                 for (var i = 0; i < allMarkers.length; i++) {
                     if ($(allMarkers[i]).attr('data-text') == tag) {
-                        return $(allMarkers[i]).offset().top - $('.navigation').height();
+                        if (i == 0) {
+                            return firstSectionHeight - additional;
+                        }
+                        return firstSectionHeight - $('.nav-tems').height() - additional;
+                    } else {
+                        firstSectionHeight += $(allMarkers[i]).closest('.content-side').height()
                     }
                 }
             }
 
+            $('.mobile-nav').on('click', '#hamburgler', function () {
+                if (document.body.classList.contains('hamburgler-active')) {
+                    closeNav();
+                } else {
+                    openNav();
+                }
+            })
+
+            $(document).on('touchmove', '', function (e) {
+
+                if (document.body.classList.contains('hamburgler-active') && $(e.target).closest('.mobile-nav').length == 0) {
+                    closeNav();
+                }
+            })
+            $('.mobile-nav').on('click', 'li', function (e) {
+                var navItems = $('.mobile-nav li');
+                var useClass = true;
+
+                if ($(e.target).attr('data-text') == $(navItems[0]).attr('data-text') || $(e.target).attr('data-text') == $(navItems[navItems.length - 1]).attr('data-text')) {
+                    useClass = false;
+                }
+
+                for (var i = 0; i < navItems.length; i++) {
+
+                    $(navItems[i]).removeClass('selected');
+                }
+                if (useClass) {
+                    $(e.target).addClass('selected');
+                }
+
+                var height = scrollToElement($(e.target).attr('data-text'), $('.mobile-nav').height() + 10);
+                closeNav();
+
+                $('body,html').animate({ scrollTop: height }, 1500);
+
+            });
         });
 
 
@@ -626,6 +691,16 @@
 
             }
         })
+
+
+
+        function closeNav() {
+            document.body.classList.remove('hamburgler-active');
+        }
+
+        function openNav() {
+            document.body.classList.add('hamburgler-active');
+        }
     </script>
 </body>
 
